tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/integer/capital-hex.stderr
TOML parse error at line 1, column 16
  |
1 | capital-hex = 0X1
  |                ^
expected newline, `#`
